syntax = "proto3";

package com.opzero.user.grpc;
option java_multiple_files = true;

service UserService {

  rpc GetProfile(ProtoGetProfileRequest) returns (ProtoGetProfileResponse) {}
  rpc CreateUser(GrpcUserCreateRequest) returns (GrpcUserCreateResponse) {}
  rpc UserExist(GrpcUserExistRequest) returns (GrpcUserExistResponse) {}
  rpc UserIdCheck(GrpcUserIdCheckRequest) returns (GrpcUserExistResponse) {}
  rpc CreateClient(GrpcCreateClientRequest) returns (GrpcCreateClientResponse){}
}

message GrpcCreateClientRequest{
  string category = 1;
  string name = 2;
  string mobileNumber = 3;
  string meterSerialNumber = 4;
  string address = 5;
  double firstReading = 6;
}

message GrpcCreateClientResponse{
  string client_id = 1;
  string name = 2;
  bool isError = 3;
  string error = 4;
}

message GrpcUserCreateRequest{
  string name = 1;
  string email = 2;
  string mobile = 3;
  string tenant = 4;
}

message GrpcUserExistRequest{
  string email = 1;
  string mobile = 2;
}

message GrpcUserIdCheckRequest{
  string userId = 1;
}

message GrpcUserExistResponse{
  bool isExist = 1;
}

message GrpcUserCreateResponse{
  string userId = 1;
  bool isError = 2;
  string error = 3;
}

message ProtoGetProfileRequest {
  string userId = 1;
}

message ProtoGetProfileResponse {
  string userId = 1;
  string name = 2;
  string givenName = 3;
  string familyName = 4;
  string preferredUsername = 5;
  string picture = 6;
  string email = 7;
  string phoneNumber = 8;
  string tenant = 9;
  string updatedAt = 10;
  bool isError = 11;
  string error = 12;
}


message ProtoTenantResource {
  string name = 1;
  string tenant = 2;
  string identifier = 3;
}

